@@ -1,20 +1,17 @@
 /*
- * Licensed to Laurent Broudoux (the "Author") under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership. Author licenses this
- * file to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
+ * Copyright The Microcks Authors.
  *
- *    http://www.apache.org/licenses/LICENSE-2.0
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ *  http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package io.github.microcks.minion.async;
 
@@ -25,18 +22,17 @@ import io.github.microcks.minion.async.client.MicrocksAPIConnector;
 import org.eclipse.microprofile.rest.client.inject.RestClient;
 import org.jboss.logging.Logger;
 
-import javax.enterprise.context.ApplicationScoped;
-import javax.inject.Inject;
+import jakarta.enterprise.context.ApplicationScoped;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 /**
- * This is a simple and local registry for Async APIs schemas. It is used as a local proxy
- * to Services Resources that are available within Microcks instance. This registry uses the
- * <code>MicrocksAPIConnector</code> to retrieve resources/schemas from instance.
+ * This is a simple and local registry for Async APIs schemas. It is used as a local proxy to Services Resources that
+ * are available within Microcks instance. This registry uses the <code>MicrocksAPIConnector</code> to retrieve
+ * resources/schemas from instance.
  * @author laurent
  */
 @ApplicationScoped
@@ -45,9 +41,15 @@ public class SchemaRegistry {
    /** Get a JBoss logging logger. */
    private final Logger logger = Logger.getLogger(getClass());
 
-   @Inject
-   @RestClient
-   MicrocksAPIConnector microcksAPIConnector;
+   private final MicrocksAPIConnector microcksAPIConnector;
+
+   /**
+    * Create a new SchemaRegistry instance.
+    * @param microcksAPIConnector The MicrocksAPIConnector to use for retrieving resources
+    */
+   public SchemaRegistry(@RestClient MicrocksAPIConnector microcksAPIConnector) {
+      this.microcksAPIConnector = microcksAPIConnector;
+   }
 
    /** The internal map backing schemas storage. This is an in-memory map. */
    private Map<String, List<SchemaEntry>> schemaEntries = new HashMap<>();
@@ -59,10 +61,9 @@ public class SchemaRegistry {
    public void updateRegistryForService(Service service) {
       clearRegistryForService(service);
       List<Resource> resources = microcksAPIConnector.getResources(service.getId());
-      logger.infof("Updating schema registry for '%s - %s' with %d entries", service.getName(), service.getVersion(), resources.size());
-      schemaEntries.put(service.getId(), resources.stream()
-            .map(resource -> new SchemaEntry(resource))
-            .collect(Collectors.toList()));
+      logger.infof("Updating schema registry for '%s - %s' with %d entries", service.getName(), service.getVersion(),
+            resources.size());
+      schemaEntries.put(service.getId(), resources.stream().map(SchemaEntry::new).toList());
    }
 
    /**
@@ -73,9 +74,7 @@ public class SchemaRegistry {
       clearRegistryForService(serviceId);
       List<Resource> resources = microcksAPIConnector.getResources(serviceId);
       logger.infof("Updating schema registry for Service '%s' with %d entries", serviceId, resources.size());
-      schemaEntries.put(serviceId, resources.stream()
-            .map(resource -> new SchemaEntry(resource))
-            .collect(Collectors.toList()));
+      schemaEntries.put(serviceId, resources.stream().map(SchemaEntry::new).toList());
    }
 
    /**
@@ -103,9 +102,8 @@ public class SchemaRegistry {
    }
 
    /**
-    * Get the content (ie. actual schema specification) of a Schema entry in the
-    * scope of a specified service.
-    * @param service The Service to get schema for
+    * Get the content (ie. actual schema specification) of a Schema entry in the scope of a specified service.
+    * @param service    The Service to get schema for
     * @param schemaName The name of the Schema entry to retrieve content for
     * @return The schema entry content or null if not found.
     */
@@ -148,9 +146,8 @@ public class SchemaRegistry {
    }
 
    /**
-    * SchemaEntry represents an image of remote resources and allow access to content.
-    * For now, content remains in-memory but a future direction for handling load could be
-    * to manage overflow to local files.
+    * SchemaEntry represents an image of remote resources and allow access to content. For now, content remains
+    * in-memory but a future direction for handling load could be to manage overflow to local files.
     */
    public class SchemaEntry {
       private String name;
@@ -158,6 +155,7 @@ public class SchemaRegistry {
       private String path;
       private ResourceType type;
       private String content;
+      private Set<String> operations;
 
       public SchemaEntry(Resource resource) {
          this.name = resource.getName();
@@ -165,22 +163,31 @@ public class SchemaRegistry {
          this.path = resource.getPath();
          this.type = resource.getType();
          this.content = resource.getContent();
+         this.operations = resource.getOperations();
       }
 
       public String getName() {
          return name;
       }
+
       public String getServiceId() {
          return serviceId;
       }
+
       public String getPath() {
          return path;
       }
+
       public ResourceType getType() {
          return type;
       }
+
       public String getContent() {
          return content;
+      }
+
+      public Set<String> getOperations() {
+         return operations;
       }
    }
 }
